--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>React - 用于构筑用户界面的 JavaScript 框架</title>
+  <title>React - 用于构建用户界面的 JavaScript 框架</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="React - 用于构筑用户界面的 JavaScript 框架">
+  <meta property="og:title" content="React - 用于构建用户界面的 JavaScript 框架">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://facebook.github.io/react/">
   <meta property="og:image" content="https://facebook.github.io/react/img/logo_og.png">
@@ -75,7 +75,7 @@
   <div class="wrap">
     <div class="text"><strong>React</strong></div>
     <div class="minitext">
-      用于构筑用户界面的 JavaScript 框架
+      用于构建用户界面的 JavaScript 框架
     </div>
 
     <div class="buttons-unit">
