--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Page Not Found - React</title>
+  <title>页面未找到 - React</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Page Not Found - React">
+  <meta property="og:title" content="页面未找到 - React">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://facebook.github.io/react/404.html">
   <meta property="og:image" content="https://facebook.github.io/react/img/logo_og.png">
@@ -73,11 +73,11 @@
 
     <section class="content wrap documentationContent nosidebar">
   <div class="inner-content">
-    <h1>Page Not Found</h1>
+    <h1>页面未找到</h1>
     <div class="subHeader"></div>
-    <p>We couldn&#39;t find what you were looking for.</p>
+    <p>你似乎来到了没有文档存在的荒原...</p>
 
-<p>Please contact the owner of the site that linked you to the original URL and let them know their link is broken.</p>
+<p><a href="/">点击这里返回文档主页</a></p>
 
 
     
