--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -6,9 +6,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Tutorial: Intro To React - React</title>
+  <title>入门教程 - React</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Tutorial: Intro To React - React">
+  <meta property="og:title" content="入门教程 - React">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://facebook.github.io/react/tutorial/tutorial.html">
   <meta property="og:image" content="https://facebook.github.io/react/img/logo_og.png">
@@ -194,13 +194,13 @@
     href="https://github.com/facebook/react/tree/master/docs/tutorial/tutorial.md"
     target="_blank">Edit on GitHub</a>
     <h1>
-      Tutorial: Intro To React
+      入门教程
     </h1>
     <div class="subHeader"></div>
 
-    <h2>Before We Start</h2>
+    <h2>课前准备</h2>
 
-<h3>What We&#39;re Building</h3>
+<h3>教程简介</h3>
 
 <p>Today, we&#39;re going to build an interactive tic-tac-toe game.</p>
 
@@ -210,7 +210,7 @@
 
 <p>Once you get a little familiar with the game, feel free to close that tab, as we&#39;ll start from a simpler template in the next sections.</p>
 
-<h3>Prerequisites</h3>
+<h3>前置知识</h3>
 
 <p>We&#39;ll assume some familiarity with HTML and JavaScript but you should be able to follow along even if you haven&#39;t used them before.</p>
 
