--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -216,11 +216,11 @@
 
 <p>If you need a refresher on JavaScript, we recommend reading <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript">this guide</a>. Note that we&#39;re also using some features from ES6, a recent version of JavaScript. In this tutorial, we&#39;re using <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions">arrow functions</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes">classes</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/let"><code>let</code></a>, and <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/const"><code>const</code></a> statements. You can use <a href="http://babeljs.io/repl/#?babili=false&evaluate=true&lineWrap=false&presets=es2015%2Creact&experimental=false&loose=false&spec=false&code=const%20element%20%3D%20%3Ch1%3EHello%2C%20world!%3C%2Fh1%3E%3B%0Aconst%20container%20%3D%20document.getElementById('root')%3B%0AReactDOM.render(element%2C%20container)%3B%0A">Babel REPL</a> to check what ES6 code compiles to.</p>
 
-<h3>How to Follow Along</h3>
+<h3>如何编写代码</h3>
 
 <p>There are two ways to complete this tutorial: you could either write the code right in the browser, or you could set up a local development environment on your machine. You can choose either option depending on what you feel comfortable with.</p>
 
-<h4>If You Prefer to Write Code in the Browser</h4>
+<h4>在浏览器中编写本教程代码</h4>
 
 <p>This is the quickest way to get started!</p>
 
@@ -228,7 +228,7 @@
 
 <p>You can now skip the next section about setting up a local development environment and head straight to the <a href="#overview">overview</a>.</p>
 
-<h4>If You Prefer to Write Code in Your Editor</h4>
+<h4>在代码编辑器中编写本教程代码</h4>
 
 <p>Alternatively, you can set up a project on your computer.</p>
 
@@ -254,15 +254,15 @@
 
 <p>We recommend following <a href="http://babeljs.io/docs/editors">these instructions</a> to configure syntax highlighting for your editor.</p>
 
-<h3>Help, I&#39;m Stuck!</h3>
+<h3>寻求帮助</h3>
 
 <p>If you get stuck, check out the <a href="https://facebook.github.io/react/community/support.html">community support resources</a>. In particular, <a href="/react/community/support.html#reactiflux-chat">Reactiflux chat</a> is a great way to get quick help. If you don&#39;t get a good answer anywhere, please file an issue, and we&#39;ll help you out.</p>
 
 <p>With this out of the way, let&#39;s get started!</p>
 
-<h2>Overview</h2>
+<h2>总览</h2>
 
-<h3>What is React?</h3>
+<h3>React 是什么？</h3>
 
 <p>React is a declarative, efficient, and flexible JavaScript library for building user interfaces.</p>
 
