Updating to discountry/react@24e7b6bb1ff38dd95604f80fc930222ff1fd9593.

--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -1200,6 +1200,10 @@
 <li>当一方获胜时，高亮显示连成一线的3颗棋子。</li>
 </ol>
 
+<blockquote>
+<p>译者注：如果你在实现上述功能时遇到了问题，也可以参考<a href="https://codepen.io/discountry/pen/ENrZzV">React井字棋游戏完整功能示例</a>。</p>
+</blockquote>
+
 <p>通过这一篇教程，我们大概了解了 React 当中包含 元素、组件、props、state 在内的一些概念。想要更深入地了解每一个关键概念，你可以继续阅读 <a href="/react/docs/hello-world.html">文档</a>。想要更详细地了解 React 组件，可以查阅 <a href="/react/docs/react-component.html"><code>React.Component</code> API 参考</a>。</p>
 
 
