Updating to discountry/react@d67845ad6f13a98e8a3c5b2ba45946f259493f36.

--- a/tutorial/tutorial.html
+++ b/tutorial/tutorial.html
@@ -191,8 +191,8 @@
 
   <div class="inner-content">
     <a class="edit-page-link"
-    href="https://github.com/facebook/react/tree/master/docs/tutorial/tutorial.md"
-    target="_blank">Edit on GitHub</a>
+    href="https://github.com/discountry/react/tree/master/docs/tutorial/tutorial.md"
+    target="_blank">纠错</a>
     <h1>
       入门教程
     </h1>
